--- a/package.json
+++ b/package.json
@@ -10,8 +10,18 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.0.0",
+    "@tanstack/query-core": "^5.59.13",
+    "@tanstack/react-query": "^5.59.15",
+    "@types/react": "~18.2.79",
+    "axios": "^1.7.7",
+    "expo": "~51.0.28",
+    "expo-status-bar": "~1.12.1",
+    "jotai": "^2.10.1",
+    "jotai-tanstack-query": "^0.9.0",
     "react": "18.3.1",
-    "react-native": "0.75.4"
+    "react-native": "0.75.4",
+    "typescript": "~5.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -21,12 +31,18 @@
     "@react-native/eslint-config": "0.75.4",
     "@react-native/metro-config": "0.75.4",
     "@react-native/typescript-config": "0.75.4",
+    "@tanstack/query-core": "^5.59.13",
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
+    "expo": "~51.0.28",
+    "expo-status-bar": "~1.12.1",
     "jest": "^29.6.3",
+    "jotai": "^2.10.1",
+    "jotai-tanstack-query": "^0.9.0",
     "prettier": "2.8.8",
+    "react-query": "^3.39.3",
     "react-test-renderer": "18.3.1",
     "typescript": "5.0.4"
   },
